tests/NormalTests/paczka1/fuzzy1/89427390.err
Error in line 2: 6ln S852 54,9
Error in line 6: PyIGNT S7V6 69,0
Error in line 7: oT7MJFj S786 59,8
Error in line 9: oT7MJFj S826 95,9
Error in line 15: oT7MJFj S786 93,7
Error in line 13: Z1iaR S826 10,3
Error in line 23: S852 S162 214,6
Error in line 19: EmG S852 10,6
Error in line 25: S852 S852 45,8
Error in line 35: PyIGNT S826 94,47
Error in line 30: S852 S162 4,4
